--- a/toDo.tex
+++ b/toDo.tex
@@ -131,7 +131,7 @@
 
 \paragraph{Thoughts on Chapter~\ref{proto1}}
 
-\begin{figure}
+\begin{code-list}
 \begin{minted}[linenos,frame=lines]{haskell}	
 data VariableName = VariableName Int String
       deriving (Eq, Data, Typeable, Ord)
@@ -160,7 +160,7 @@ data Sentence = Query   Body
   \vspace*{-1.0\baselineskip}
   \caption{A sample Minted figure}
   \label{fig:sample}
-\end{figure}
+\end{code-list}
 I am looking at what are currently lines 145--\textit{on} in
 \Verb!proto1.tex!, and I am not sure whether 
 \begin{compactenum}
