--- a/embedding.tex
+++ b/embedding.tex
@@ -180,12 +180,13 @@ The next subsection covers the literature based on the above with improvements a
   Language names in this \P{} are not marked by \texttt{progLang}.
 }
 
-\begin{description}
 
-\item[$\bullet$\endnote{%
+
+$\bullet$\endnote{%
     Rather than a \texttt{description} environment with \texttt{\$bullet\$s}, use
     \texttt{itemize}.
-}]  Papers from Mike Spivey and Silvija Seres
+}
+  \subsection{Papers from Mike Spivey and Silvija Seres}
 
 
   The work presented in the series
@@ -211,7 +212,7 @@ The next subsection covers the literature based on the above with improvements a
 }
 
 
-\item[$\bullet$] Other works related or based on the above
+  \subsection{Other works related or based on the above}
 
 %\par This section takes a look at the improvements at the attempts mostly based on the work from the previous section. Some work is done by the one of the authors above while the other prominent others in the same field.
 
@@ -234,15 +235,14 @@ The next subsection covers the literature based on the above with improvements a
   and a monadic encapsulation to turn a \progLang{Prolog} predicate into a \progLang{Haskell} function.
 
 
-\end{description}
-
 
 \section{Related Libraries in Haskell}
-\begin{description}
-\item[$\bullet$]Prolog Libraries\endnote{%
-  See the preceding comments about using \texttt{itemize} rather than \texttt{description}.
-  Maybe these should be subsections.
-}
+%\begin{description}
+%\item[$\bullet$]\endnote{%
+%%   See the preceding comments about using \texttt{itemize} rather than \texttt{description}.
+%%   Maybe these should be subsections.
+%% }
+\subsection{Prolog Libraries}
 
   To replicate Prolog like\endnote{%
     ``Prolog like'' should be ``\progLang{Prolog}-like''.
@@ -270,7 +270,8 @@ The next subsection covers the literature based on the above with improvements a
 \end{enumerate}
 \end{comment}
 
-\item[$\bullet$]Logic Libraries
+%\item[$\bullet$]Logic Libraries
+\subsection{Logic Libraries}
 
   The next category is about the logical aspects of Prolog, again a handful of libraries do exist and provide a
   part of the functionality which is related\endnote{%
@@ -299,7 +300,8 @@ The next subsection covers the literature based on the above with improvements a
 \end{enumerate}
 \end{comment}
 
-\item[$\bullet$]Unification Libraries
+%\item[$\bullet$]Unification Libraries
+\subsection{Unification Libraries}
 
 The more specific the feature the lesser the support in Haskell. Moving on to the other distinct feature of Prolog is
 Unification, two libraries exist \cite{unification-fd-lib}, \cite{cmu-lib} that unify two Prolog Terms and return the resulting
@@ -312,7 +314,8 @@ substitution.
 \end{enumerate}
 \end{comment}
 
-\item[$\bullet$]Backtracking
+%\item[$\bullet$]Backtracking
+\subsection{Backtracking}
 
 Another important aspect of \progLang{Prolog} is backtracking. To simulate it in \progLang{Haskell}, the libraries \cite{stream-monad-lib, logicst-lib} use monads. Moreover, there is a package for the \progLang{Egison} programming language \cite{egison-lib} which supports non-linear pattern-matching with backtracking.
 
@@ -326,7 +329,7 @@ Another important aspect of \progLang{Prolog} is backtracking. To simulate it in
 
 \end{comment}
 
-\end{description}
+%% \end{description}
 
 \begin{comment}
 \section{Possibly Related Content}
