Cleaned proto-1 a little and added a few points to toDo.tex .

--- a/proto1.tex
+++ b/proto1.tex
@@ -93,9 +93,7 @@ generic unification algorithm implementation.
 
 The relevant components are,
 \begin{enumerate}
-\item The \Verb!Unifiable! class\endnote{%
-  replace with ``the \Verb!Unifiable! class.
-}
+\item The \Verb!Unifiable! class
 
 \item The \Verb!UTerm! data type
 
@@ -206,9 +204,12 @@ yes
 \item Two terms unify if and only if it follows from the previous three clauses that they unify.
 \end{enumerate}
 
-Unification is just a part of the process were the language attempts to find a solution for the given query using the rules provided in the
-knowledge base. The other part is actually reaching a point where two terms need to be unified i.e searching. Together they form the query
-resolver in \progLang{Prolog}.
+Unification is just a part of the process \yyy{were}{where} the language
+attempts to find a solution for the given query using the rules provided
+in the knowledge base.
+The other part is actually reaching a point where two terms need to be
+unified i.e searching.
+Together they form the query resolver in \progLang{Prolog}.
 
 \newpage
 
