--- a/toDo.tex
+++ b/toDo.tex
@@ -38,6 +38,25 @@
 \item [\textbf{Mehul}]
 
 \item
+  Search for all latin abbreviations (\textit{e.g.,} ``i.e.''), and be
+  sure that you have appropriate punctuation before and after.
+  If you are unsure of the punctuation to use, try substituting plain
+  English, \yyy{\textit{e.g.,}}{for instance} using ``that is'' in place
+  of ``i.e.''.
+
+\item
+  Determine how you want to punctuate items in enumerated (and other)
+  list.
+  Generally speaking there should be a punctuation mark at the end of an
+  item in a list.
+  Frequently these are comsas or semi-colons; but they may also be
+  periods if each of the list items are sentences or \P{}s.
+
+  Also, there is usually a punctuation mark just before the first item
+  of the list, and this is usually \textit{not} a comma.  Colons and
+  periods are typical.
+
+\item
   Justify the use of capitals in ``Functional styles of programming''.
   Minimally, say what rules you are using.
 \item
